--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="page-wrapper">
     <header id="header">
-      <a id="logo1" href="index.html"><img src="logo3.png"> alt="Acme in red bold letters with gray shadowing"</a>
+      <a id="logo1" href="index.html"><img src="logo3.png" alt="Acme in red bold letters with gray shadowing"></a>
       <h1>My Demo Site</h1>
     </header>
     <nav id="main-nav">
