--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <div id="page-wrapper">
     <header id="header">
-      <a id="logo1" href="index.html"><img src="logo3.png" alt="Acme in red bold letters with gray shadowing"></a>
+
+      <a id="logo1" href="index.html"><img src="logo3.png"> alt="Acme in red bold letters with gray shadowing"</a>
       <h1>My Demo Site</h1>
     </header>
     <nav id="main-nav">
@@ -23,7 +24,7 @@
     </nav>
     <main id="content-wrapper">
        <div id="main-content">
-         <h2><b>This is our h2 Tag</b></h2>
+         <h2><strong>This is our h2 Tag</strong></h2>
          <img class="imageR" src="./images/main.png" alt="]Main Squeeze Juice logo, in black and white">
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -49,10 +50,10 @@
        <aside id="side-content">
          <h3>Interesting Articles</h3>
          <ol id="news">
-           <li><a href="#">Article 1</a><p>Preview of very interesting article article</p></li>
-           <li><a href="#">Article 2</a><p>Preview of very interesting article article</p></li>
-           <li><a href="#">Article 3</a><p>Preview of very interesting article article</p></li>
-           <li><a href="#">Article 4</a><p>Preview of very interesting article article</p></li>
+           <li><a href="#">Article 1</a><div><p>Preview of very interesting article article</p></div></li>
+           <li><a href="#">Article 2</a><div><p>Preview of very interesting article article</p></div></li>
+           <li><a href="#">Article 3</a><div><p>Preview of very interesting article article</p></div></li>
+           <li><a href="#">Article 4</a><div><p>Preview of very interesting article article</p></div></li>
          </ol>
        </aside>
      </main>
